--- a/index.html
+++ b/index.html
@@ -1,64 +1,63 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title> Mitchell and Associates Accountants by surgemedia</title>
+<!DOCTYPE html>
+<html class=" ">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		 <title>Example include | Surge Media</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1> Mitchell and Associates Accountants</h1>
-        <p></p>
+		<!-- Bootstrap CSS -->
+		<link href="/skin.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="http://mfzy.co/isotope.pkgd.js"></script>
+		
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	</head>
+<div class="container">
+	<div id="templates-buildtool" class="col-lg-6">	
+		<h2>Rendered Templates</h2>
+	</div>
+	<pre id="error-console" class="col-lg-6">	
+		
+	</pre>
+</div>
 
-        <p class="view"><a href="https://github.com/surgemedia/MIT04182">View the Project on GitHub <small>surgemedia/MIT04182</small></a></p>
+<div id="resources-buildtool" class="container">
+		<h2>Resources</h2>
+		<p>Here are some places to find snippets</p>
+		<ul>
+			<li class="col-lg-4"><a href="http://cssdeck.com"><img src="/assets/images/logo-cssdeck.jpg" alt="Cssdeck"></a></li>
+			<li class="col-lg-4"><a href="http://codepen.io"><img src="/assets/images/logo-codepen.jpg" alt="Codepen"></a></li>
+			<li class="col-lg-4"><a href="http://bootsnipp.com/"><img src="/assets/images/logo-bootsnip.jpg" alt="bootsnip"></a></li>
+		</ul>
+	</div>	 
+<script>
+		$.getJSON('/render/template-list.json', function(json) {
+			console.log(json);
+			for (var i = json.length - 1; i >= 0; i--) {
+				console.log(json[i]['path'])
+				console.log(json[i]['path'].split('/'));
+				var html = "<li><a href='/"+json[i]['path']+"'>"+json[i]['path']+"</a></li>";
+				$('#templates-buildtool').append('<ul>');
+				$('#templates-buildtool').append(html)
+				$('#templates-buildtool').append('</ul>');
+
+			};
+		
+				/*optional stuff to do after success */
+		});
+			
+		</script>
+
+	
 
 
-        <ul>
-          <li><a href="https://github.com/surgemedia/MIT04182/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/surgemedia/MIT04182/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/surgemedia/MIT04182">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/surgemedia">surgemedia</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+		<script src="/assets/js/main.js"></script>
+	</body>	
 </html>
